--- a/YellowstonePathology/packages.config
+++ b/YellowstonePathology/packages.config
@@ -1,7 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Google.Protobuf" version="3.2.0" targetFramework="net461" />
+  <package id="Grpc" version="1.1.0" targetFramework="net461" />
+  <package id="Grpc.Core" version="1.1.0" targetFramework="net461" />
+  <package id="Grpc.Tools" version="1.1.0" targetFramework="net461" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.129" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
   <package id="redis-64" version="3.0.501" targetFramework="net461" />
   <package id="StackExchange.Redis" version="1.1.603" targetFramework="net461" />
+  <package id="System.Interactive.Async" version="3.1.1" targetFramework="net461" />
 </packages>
