--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -1167,6 +1167,8 @@
     <Compile Include="Business\Test\PDL1SP142\PDL1SP142WPHOBXView.cs" />
     <Compile Include="Business\Test\PlateletAssociatedAntibodies\PlateletAssociatedAntibodiesEPICOBXView.cs" />
     <Compile Include="Business\Test\RASRAFPanel\RASRAFCMMCNTEView.cs" />
+    <Compile Include="Business\Test\RestrospectiveReview\RetrospectiveReviewTest.cs" />
+    <Compile Include="Business\Test\RestrospectiveReview\RetrospectiveReviewTestOrder.cs" />
     <Compile Include="Business\Test\RETMutationAnalysis\RETMutationAnalysisTest.cs" />
     <Compile Include="Business\Test\ROS1ByFISH\ROS1ByFISHPositiveResult.cs" />
     <Compile Include="Business\Test\IRF4F\IRF4FTest.cs" />
@@ -3540,8 +3542,8 @@
       <DependentUpon>PublishedDocumentReview.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="UI\Surgical\PeerReviewDialog.xaml.cs">
-      <DependentUpon>PeerReviewDialog.xaml</DependentUpon>
+    <Compile Include="UI\Surgical\ProspectiveReviewDialog.xaml.cs">
+      <DependentUpon>ProspectiveReviewDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\Surgical\ResultPathReview.xaml.cs">
       <DependentUpon>ResultPathReview.xaml</DependentUpon>
@@ -3732,6 +3734,10 @@
     </Compile>
     <Compile Include="UI\Test\RASRAFPanelResultPath.cs" />
     <Compile Include="UI\Test\ResultControl.cs" />
+    <Compile Include="UI\Test\RetrospectiveReviewResultPage.xaml.cs">
+      <DependentUpon>RetrospectiveReviewResultPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Test\RetrospectiveReviewResultPath.cs" />
     <Compile Include="UI\Test\ROS1ResultPath.cs" />
     <Compile Include="UI\Test\ROS1ResultPage.xaml.cs">
       <DependentUpon>ROS1ResultPage.xaml</DependentUpon>
@@ -4653,8 +4659,8 @@
     <Compile Include="UI\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="UI\Surgical\PeerReview.xaml.cs">
-      <DependentUpon>PeerReview.xaml</DependentUpon>
+    <Compile Include="UI\Surgical\ProspectiveReview.xaml.cs">
+      <DependentUpon>ProspectiveReview.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\TemplateSelector\CytologyPanelOrderTemplateSelector.cs" />
     <Compile Include="UI\Test\LabUI.cs" />
@@ -5453,7 +5459,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="UI\Surgical\PeerReviewDialog.xaml">
+    <Page Include="UI\Surgical\ProspectiveReviewDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -5641,6 +5647,10 @@
     <Page Include="UI\Test\RASRAFPanelResultPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\Test\RetrospectiveReviewResultPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="UI\Test\ROS1ResultPage.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -6467,7 +6477,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="UI\Surgical\PeerReview.xaml">
+    <Page Include="UI\Surgical\ProspectiveReview.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
       <Generator>MSBuild:Compile</Generator>
