--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -43,7 +43,7 @@
     <MapFileExtensions>false</MapFileExtensions>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>74</ApplicationRevision>
+    <ApplicationRevision>78</ApplicationRevision>
     <ApplicationVersion>10.1.7.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -308,6 +308,7 @@
     <Compile Include="Business\Billing.Model\PropertyChanges.cs" />
     <Compile Include="Business\Client.Model\HPVCompoundStandingOrderRule6.cs" />
     <Compile Include="Business\Client.Model\IdahoClientIdList.cs" />
+    <Compile Include="Business\Facility.Model\FortHarrisonVA.cs" />
     <Compile Include="Business\Facility.Model\CasperDermatologyClinic.cs" />
     <Compile Include="Business\Facility.Model\OregonHealthScienceUniversity.cs" />
     <Compile Include="Business\Facility.Model\MadisonMemorialHospital.cs" />
@@ -3504,6 +3505,9 @@
     <Compile Include="UI\ReportOrder\ReportOrderMolecularAnalysisDialog.xaml.cs">
       <DependentUpon>ReportOrderMolecularAnalysisDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UI\RetrospectiveReviews.xaml.cs">
+      <DependentUpon>RetrospectiveReviews.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UI\SortDirectionAdorner.cs" />
     <Compile Include="UI\SpellCheckAccessionOrder.cs" />
     <Compile Include="UI\SpellCheckProperty.cs" />
@@ -5427,6 +5431,10 @@
     <Page Include="Resources\Styles\LoginStyles.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="UI\RetrospectiveReviews.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UI\Surgical\SuggestedAdditionalTestingPage.xaml">
       <SubType>Designer</SubType>
