--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -1201,6 +1201,7 @@
     <Compile Include="Business\Test\ROS1ByFISH\ROS1ByFISHPositiveResult.cs" />
     <Compile Include="Business\Test\IRF4F\IRF4FTest.cs" />
     <Compile Include="Business\Test\SoftTissueTumorProfile\SoftTissueTumorProfileTest.cs" />
+    <Compile Include="Business\Test\SS18SYT\SS18SYTTest.cs" />
     <Compile Include="Business\Test\STAT3MutationAnalysis\STAT3MutationAnalysisTest.cs" />
     <Compile Include="Business\Test\TcellLeukemia1\TcellLeukemia1Test.cs" />
     <Compile Include="Business\Test\TCellNKProfile\TCellNKProfileEPICOBXView.cs" />
