--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -1148,6 +1148,7 @@
     <Compile Include="Business\Test\BCellSubsetAnalysis\ReferenceRangeValue.cs" />
     <Compile Include="Business\Test\BRAFV600EK\BRAFV600EKWPHOBXView.cs" />
     <Compile Include="Business\Test\CalreticulinMutationAnalysis\CalreticulinMutationAnalysisWPHOBXView.cs" />
+    <Compile Include="Business\Test\ChromosomeAnalysisBreakage\ChromosomeAnalysisBreakageTest.cs" />
     <Compile Include="Business\Test\CKIT\CKITWPHOBXView.cs" />
     <Compile Include="Business\Test\ComprehensiveColonCancerProfile\ComprehensiveColonCancerProfileWPHOBXView.cs" />
     <Compile Include="Business\Test\CXCR4MutationAnalysis\CXCR4MutationAnalysisTest.cs" />
@@ -1161,6 +1162,7 @@
     <Compile Include="Business\Test\HematopathologySummary\HematopathologySummaryTestOrder.cs" />
     <Compile Include="Business\Test\HematopathologySummary\HematopathologySummaryWordDocument.cs" />
     <Compile Include="Business\Test\HematopathologySummary\HematopathologySummaryWPHOBXView.cs" />
+    <Compile Include="Business\Test\HER2BreastEquivocalFISHPanel\HER2BreastEquivocalFISHPanelTest.cs" />
     <Compile Include="Business\Test\HoldForFlow\HoldForFlowWPHOBXView.cs" />
     <Compile Include="Business\Test\HPV1618SolidTumor\HPV1618SolidTumorBothNegativeResult.cs" />
     <Compile Include="Business\Test\HPV1618SolidTumor\HPV1618SolidTumorBothPositiveResult.cs" />
