--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -43,7 +43,7 @@
     <MapFileExtensions>false</MapFileExtensions>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>148</ApplicationRevision>
+    <ApplicationRevision>158</ApplicationRevision>
     <ApplicationVersion>10.1.7.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -311,6 +311,7 @@
     <Compile Include="Business\Billing.Model\PropertyChanges.cs" />
     <Compile Include="Business\Client.Model\HPVCompoundStandingOrderRule6.cs" />
     <Compile Include="Business\Client.Model\IdahoClientIdList.cs" />
+    <Compile Include="Business\Facility.Model\CastleBiosciences.cs" />
     <Compile Include="Business\Facility.Model\UniversityOfMississippi.cs" />
     <Compile Include="Business\Facility.Model\NorthernMtHealthcare.cs" />
     <Compile Include="Business\Facility.Model\FortHarrisonVA.cs" />
@@ -1168,6 +1169,7 @@
     <Compile Include="Business\Test\HematopathologySummary\HematopathologySummaryWPHOBXView.cs" />
     <Compile Include="Business\Test\HER2BreastEquivocalFISHPanel\HER2BreastEquivocalFISHPanelTest.cs" />
     <Compile Include="Business\Test\HoldForFlow\HoldForFlowWPHOBXView.cs" />
+    <Compile Include="Business\Test\HPV1618SolidTumor\HPV1618SolidTumorAnalRegionResult.cs" />
     <Compile Include="Business\Test\HPV1618SolidTumor\HPV1618SolidTumorBothNegativeResult.cs" />
     <Compile Include="Business\Test\HPV1618SolidTumor\HPV1618SolidTumorBothPositiveResult.cs" />
     <Compile Include="Business\Test\HPV1618SolidTumor\HPV1618SolidTumorCMMCView.cs" />
