--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -1152,6 +1152,8 @@
     <Compile Include="Business\Test\BCellSubsetAnalysis\BCellSubsetAnalysisWPHOBXView.cs" />
     <Compile Include="Business\Test\BCellSubsetAnalysis\ReferenceRanges.cs" />
     <Compile Include="Business\Test\BCellSubsetAnalysis\ReferenceRangeValue.cs" />
+    <Compile Include="Business\Test\BRAFMutationAnalysis\BRAFMutationAnalysisTest.cs" />
+    <Compile Include="Business\Test\BRAFMutationAnalysis\BRAFMutationAnalysisTestOrder.cs" />
     <Compile Include="Business\Test\BRAFV600EK\BRAFV600EKWPHOBXView.cs" />
     <Compile Include="Business\Test\CalreticulinMutationAnalysis\CalreticulinMutationAnalysisWPHOBXView.cs" />
     <Compile Include="Business\Test\ChromosomeAnalysisBreakage\ChromosomeAnalysisBreakageTest.cs" />
