Continue with BRAF Mutation Analysis

--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -1153,8 +1153,26 @@
     <Compile Include="Business\Test\BCellSubsetAnalysis\BCellSubsetAnalysisWPHOBXView.cs" />
     <Compile Include="Business\Test\BCellSubsetAnalysis\ReferenceRanges.cs" />
     <Compile Include="Business\Test\BCellSubsetAnalysis\ReferenceRangeValue.cs" />
+    <Compile Include="Business\Test\BRAFMutationAnalysis\BRAFMutationAnalysisDetectedPapillaryThyroidResult.cs" />
+    <Compile Include="Business\Test\BRAFMutationAnalysis\BRAFMutationAnalysisCMMCNTEView.cs" />
+    <Compile Include="Business\Test\BRAFMutationAnalysis\BRAFMutationAnalysisDetectedCRCResult.cs" />
+    <Compile Include="Business\Test\BRAFMutationAnalysis\BRAFMutationAnalysisDetectedLynchSyndromeResult.cs" />
+    <Compile Include="Business\Test\BRAFMutationAnalysis\BRAFMutationAnalysisDetectedMetastaticMelanomaResult.cs" />
+    <Compile Include="Business\Test\BRAFMutationAnalysis\BRAFMutationAnalysisDetectedResult.cs" />
+    <Compile Include="Business\Test\BRAFMutationAnalysis\BRAFMutationAnalysisEPICOBXView.cs" />
+    <Compile Include="Business\Test\BRAFMutationAnalysis\BRAFMutationAnalysisIndeterminateResult.cs" />
+    <Compile Include="Business\Test\BRAFMutationAnalysis\BRAFMutationAnalysisInsufficientResult.cs" />
+    <Compile Include="Business\Test\BRAFMutationAnalysis\BRAFMutationAnalysisNotDetectedCRCResult.cs" />
+    <Compile Include="Business\Test\BRAFMutationAnalysis\BRAFMutationAnalysisNotDetectedLynchSyndromeResult.cs" />
+    <Compile Include="Business\Test\BRAFMutationAnalysis\BRAFMutationAnalysisNotDetectedMetastaticMelanomaResult.cs" />
+    <Compile Include="Business\Test\BRAFMutationAnalysis\BRAFMutationAnalysisNotDetectedPapillaryThyroidResult.cs" />
+    <Compile Include="Business\Test\BRAFMutationAnalysis\BRAFMutationAnalysisNotDetectedResult.cs" />
+    <Compile Include="Business\Test\BRAFMutationAnalysis\BRAFMutationAnalysisResult.cs" />
+    <Compile Include="Business\Test\BRAFMutationAnalysis\BRAFMutationAnalysisResultCollection.cs" />
     <Compile Include="Business\Test\BRAFMutationAnalysis\BRAFMutationAnalysisTest.cs" />
     <Compile Include="Business\Test\BRAFMutationAnalysis\BRAFMutationAnalysisTestOrder.cs" />
+    <Compile Include="Business\Test\BRAFMutationAnalysis\BRAFMutationAnalysisWordDocument.cs" />
+    <Compile Include="Business\Test\BRAFMutationAnalysis\BRAFMutationAnalysisWPHOBXView.cs" />
     <Compile Include="Business\Test\BRAFV600EK\BRAFV600EKWPHOBXView.cs" />
     <Compile Include="Business\Test\CalreticulinMutationAnalysis\CalreticulinMutationAnalysisWPHOBXView.cs" />
     <Compile Include="Business\Test\ChromosomeAnalysisBreakage\ChromosomeAnalysisBreakageTest.cs" />
